tested using Colaboratory

--- a/DeepParking.ipynb
+++ b/DeepParking.ipynb
@@ -218,58 +218,6 @@
     },
     {
       "metadata": {
-        "id": "ShOzoI2QYBVI",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "# arch=resnet101\n",
-        "# PATH = \"./data/\"\n",
-        "# sz=224 \n",
-        "\n",
-        "# data = ImageClassifierData.from_paths(PATH, tfms=tfms_from_model(arch, sz))\n",
-        "# learn = ConvLearner.pretrained(arch, data, precompute=True)\n",
-        "\n",
-        "# log_preds = learn.predict()\n",
-        "# log_preds.shape\n",
-        "\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "oQGok3HnN2fW",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "# log_preds[:10]\n",
-        "# pred = np.argmax(log_preds, axis=1)\n",
-        "# pred[700:800]\n",
-        "# probs = np.exp(log_preds[:,0])\n",
-        "# plot_val_with_title(rand_by_correct(True), \"Correctly classified\")\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "Qouq-GkSPaMM",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "# probs"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
         "id": "JwtkRSOiYBVL",
         "colab_type": "code",
         "colab": {
@@ -285,13 +233,7 @@
         "sz=224 \n",
         "data = ImageClassifierData.from_paths(PATH, tfms=tfms_from_model(arch, sz))\n",
         "learn = ConvLearner.pretrained(arch, data, precompute=False)\n",
-        "# learn.precompute=False\n",
         "trn_tfms, val_tfms = tfms_from_model(arch,sz) # get transformations\n",
-        "\n",
-        "#im = val_tfms(Image.open('image.png'))\n",
-        "#learn.precompute=False # We'll pass in a raw image, not activations\n",
-        "#preds = learn.predict_array(im[None])\n",
-        "#np.argmax(preds) # preds are log probabilities of classes\n",
         "\n",
         "def run_classifier(img):\n",
         "    im = val_tfms(img)\n",
@@ -301,7 +243,6 @@
         "    if pred == 0 :\n",
         "        return False\n",
         "    else:\n",
-        "#         parking_status[id] = False\n",
         "        return True"
       ],
       "execution_count": 10,
@@ -429,19 +370,13 @@
         "        \n",
         "    # motion detection for all objects\n",
         "    if dict['motion_detection']:\n",
-        "        # frame_blur = frame_blur[380:420, 240:470]\n",
-        "        # cv2.imshow('dss', frame_blur)\n",
         "        fgmask = fgbg.apply(frame_blur)\n",
         "        bw = np.uint8(fgmask==255)*255\n",
         "        bw = cv2.erode(bw, kernel_erode, iterations=1)\n",
         "        bw = cv2.dilate(bw, kernel_dilate, iterations=1)\n",
-        "        # cv2.imshow('dss',bw)\n",
-        "        # cv2.imwrite(\"frame%d.jpg\" % co, bw)\n",
         "        (_, cnts, _) = cv2.findContours(bw.copy(), cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
         "        # loop over the contours\n",
         "        for c in cnts:\n",
-        "            # print(cv2.contourArea(c))\n",
-        "            # if the contour is too small, we ignore it\n",
         "            if cv2.contourArea(c) < dict['min_area_motion_contour']:\n",
         "                continue\n",
         "            (x, y, w, h) = cv2.boundingRect(c)\n",
@@ -468,12 +403,6 @@
         "            if status != parking_status[ind] and parking_buffer[ind]==None:\n",
         "                parking_buffer[ind] = video_cur_pos\n",
         "                change_pos = video_cur_pos\n",
-        "                # print(\"state \", ind,delta)\n",
-        "                # applying classifier in case a change is detected in the status of area\n",
-        "                # if dict['classifier_used']:\n",
-        "                #     classifier_result = run_classifier(roi_gray)\n",
-        "                #     if classifier_result:\n",
-        "                #         print(classifier_result)\n",
         "            # If status is still different than the one saved and counter is open\n",
         "            elif status != parking_status[ind] and parking_buffer[ind]!=None:\n",
         "                if video_cur_pos - parking_buffer[ind] > dict['park_sec_to_wait']:\n",
@@ -495,7 +424,6 @@
         "                res = run_classifier(roi_gray_ov)\n",
         "                if res:\n",
         "                    parking_data_motion.append(parking_data[ind])\n",
-        "                    # del parking_data[ind]\n",
         "                    color = (0,255,0)\n",
         "            else:\n",
         "                color = (0,0,255)\n",
@@ -506,58 +434,6 @@
         "                    print_parkIDs(park, points, frame_out)\n",
         "            \n",
         "            \n",
-        "    \n",
-        "#     if parking_data_motion != []:\n",
-        "#         for index, park_coord in enumerate(parking_data_motion):\n",
-        "#             points = np.array(park_coord['points'])\n",
-        "#             color = (0, 0, 255)\n",
-        "#             recta = parking_bounding_rects[ind]\n",
-        "#             roi_gray1 = frame[recta[1]:(recta[1] + recta[3]),\n",
-        "#                             recta[0]:(recta[0] + recta[2])]  # crop roi for faster calcluation\n",
-        "#             # laplacian = cv2.Laplacian(roi_gray, cv2.CV_64F)\n",
-        "#             # delta2 = np.mean(np.abs(laplacian * parking_mask[ind]))\n",
-        "#             # state = delta2<1\n",
-        "#             # classifier_result = run_classifier(roi_gray1, index)\n",
-        "#             # cv2.imshow('dsd', roi_gray1)\n",
-        "#             fgbg1 = cv2.createBackgroundSubtractorMOG2(history=300, varThreshold=16, detectShadows=True)\n",
-        "#             roi_gray1_blur = cv2.GaussianBlur(roi_gray1.copy(), (5, 5), 3)\n",
-        "#             # cv2.imshow('sd', roi_gray1_blur)\n",
-        "#             fgmask1 = fgbg1.apply(roi_gray1_blur)\n",
-        "#             bw1 = np.uint8(fgmask1 == 255) * 255\n",
-        "#             bw1 = cv2.erode(bw1, kernel_erode, iterations=1)\n",
-        "#             bw1 = cv2.dilate(bw1, kernel_dilate, iterations=1)\n",
-        "#             # cv2.imshow('sd', bw1)\n",
-        "#             # cv2.imwrite(\"frame%d.jpg\" % co, bw)\n",
-        "#             (_, cnts1, _) = cv2.findContours(bw1.copy(), cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
-        "#             # loop over the contours\n",
-        "#             for c in cnts1:\n",
-        "#                 print(cv2.contourArea(c))\n",
-        "#                 # if the contour is too small, we ignore it\n",
-        "#                 if cv2.contourArea(c) < 4:\n",
-        "#                     continue\n",
-        "#                 (x, y, w, h) = cv2.boundingRect(c)\n",
-        "#                 classifier_result1 = run_classifier(roi_gray1)\n",
-        "#                 if classifier_result1:\n",
-        "#                 # print(classifier_result)\n",
-        "#                     color = (0, 0, 255)  # Red again if car found by classifier\n",
-        "#                 else:\n",
-        "#                     color = (0,255, 0)\n",
-        "#             classifier_result1 = run_classifier(roi_gray1)\n",
-        "#             if classifier_result1:\n",
-        "#                 # print(classifier_result)\n",
-        "#                 color = (0, 0, 255)  # Red again if car found by classifier\n",
-        "#             else:\n",
-        "#                 color = (0, 255, 0)\n",
-        "#             cv2.drawContours(frame_out, [points], contourIdx=-1,\n",
-        "#                                  color=color, thickness=2, lineType=cv2.LINE_8)\n",
-        "\n",
-        "#     if dict['pedestrian_detection']:\n",
-        "#         # detect people in the image. Slows down the program, requires high GPU speed\n",
-        "#         (rects, weights) = hog.detectMultiScale(frame, winStride=(4, 4), padding=(8, 8), scale=1.05)\n",
-        "#         # draw the  bounding boxes\n",
-        "#         for (x, y, w, h) in rects:\n",
-        "#             cv2.rectangle(frame_out, (x, y), (x + w, y + h), (255, 0, 0), 2)\n",
-        "\n",
         "    # write the output frames\n",
         "    if dict['save_video']:\n",
         "#         if video_cur_frame % 35 == 0: # take every 30 frames\n",
@@ -565,12 +441,12 @@
         "\n",
         "    # Display video\n",
         "    #cv2.imshow('frame', frame_out)\n",
-        "#     if video_cur_frame < 256:\n",
+        "\n",
+        " #     if video_cur_frame < 256:\n",
         "    cv2.imwrite('./videos/frameset/%d.jpg' % video_cur_frame, frame_out)\n",
         "#     else:\n",
         "#       break\n",
         "      \n",
-        "    # cv2.imshow('background mask', bw)\n",
         "    k = cv2.waitKey(1)\n",
         "    if k == ord('q'):\n",
         "        break\n",
@@ -612,7 +488,7 @@
       },
       "cell_type": "code",
       "source": [
-        "!mkdir ./videos/frameset\n",
+        "# !mkdir ./videos/frameset\n",
         "# !ls"
       ],
       "execution_count": 0,
@@ -637,6 +513,7 @@
         "images = sorted(images, key=lambda x: float(os.path.split(x)[1][:-3]))\n",
         "\n",
         "outvid = os.path.join(VIDEO_DIR, \"out.mp4\")\n",
+        "\n",
         "# print(images)\n",
         "# for image in images:\n",
         "#   img = cv2.imread(image)\n",
@@ -675,8 +552,8 @@
         "    fourcc = VideoWriter_fourcc(*format)\n",
         "    vid = None\n",
         "    for image in images:\n",
-        "#         if not os.path.exists(image):\n",
-        "#             raise FileNotFoundError(image)\n",
+        "        if not os.path.exists(image):\n",
+        "            raise FileNotFoundError(image)\n",
         "        img = imread(image)\n",
         "        if vid is None:\n",
         "            if size is None:\n",
@@ -688,9 +565,7 @@
         "    vid.release()\n",
         "    return vid\n",
         "\n",
-        "\n",
-        "# Directory of images to run detection on\n",
-        "make_video(outvid, images, fps=30)"
+        "\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -703,6 +578,9 @@
       },
       "cell_type": "code",
       "source": [
+        "# Directory of images to run detection on\n",
+        "make_video(outvid, images, fps=30)\n",
+        "\n",
         "# !mv frameset/ ./videos/"
       ],
       "execution_count": 0,
@@ -716,38 +594,86 @@
       },
       "cell_type": "code",
       "source": [
+        "# press escape to finish doing real time boxing.\n",
+        "# Program marks the polygons in the figure when it gets 4 double clicks\n",
+        "import cv2\n",
+        "import yaml\n",
+        "import numpy as np\n",
         "\n",
-        "# # Classifier demonstration on different videos:\n",
-        "# from imutils.object_detection import non_max_suppression\n",
+        "refPt = []\n",
+        "cropping = False\n",
+        "data = []\n",
+        "file_path = 'Khare_yml_02.yml'\n",
+        "img = cv2.imread('Khare_testFrame_02.jpg')\n",
         "\n",
-        "# def perform_classification(video_src, cascade_src):\n",
-        "#     cap = cv2.VideoCapture(video_src)\n",
-        "#     car_cascade = cv2.CascadeClassifier(cascade_src)\n",
-        "#     while True:\n",
-        "#         ret, img = cap.read()\n",
-        "#         if (type(img) == type(None)):\n",
-        "#             print('Video not found')\n",
-        "#             break\n",
-        "#         image_scaled = cv2.resize(img, None, fx=0.6, fy=0.6)\n",
-        "#         gray = cv2.cvtColor(image_scaled, cv2.COLOR_BGR2GRAY)\n",
-        "#         cars = car_cascade.detectMultiScale(gray, 1.1, 1) #1.1, 1\n",
-        "#         cars = np.array([[x, y, x + w, y + h] for (x, y, w, h) in cars])\n",
-        "#         pick = non_max_suppression(cars, probs=None, overlapThresh=0.65)\n",
-        "#         for (x, y, w, h) in pick:\n",
-        "#             # cv2.rectangle(image_scaled, (x, y), (x + w, y + h), (0 , 255, 255), 2) #bgr\n",
-        "#             cv2.rectangle(image_scaled, (x, y), (w,  h), (0, 255, 255), 2)\n",
-        "#         cv2.imshow('Press ESC key to finish', image_scaled)\n",
+        "def yaml_loader(file_path):\n",
+        "    with open(file_path, \"r\") as file_descr:\n",
+        "        data = yaml.load(file_descr)\n",
+        "        return data\n",
         "\n",
-        "#             # press escape key to exit\n",
-        "#         if cv2.waitKey(33) == 27:\n",
-        "#             break\n",
-        "#     print('Execution finished')\n",
-        "#     cv2.destroyAllWindows()\n",
-        "    \n",
-        "# perform_classification('Khare_testvideo_01.mp4', 'Khare_classifier_01.xml')    # press escape to finish\n",
-        "# perform_classification('Khare_testvideo_01.mp4', 'Khare_classifier_02.xml')\n",
-        "# perform_classification('Khare_testvideo_02.avi', 'Khare_classifier_01.xml')    # M6 highway Britain\n",
-        "# perform_classification('Khare_testvideo_02.avi', 'Khare_classifier_02.xml')    # M6 highway Britain"
+        "\n",
+        "def yaml_dump(file_path, data):\n",
+        "    with open(file_path, \"a\") as file_descr:\n",
+        "        yaml.dump(data, file_descr)\n",
+        "\n",
+        "\n",
+        "def yaml_dump_write(file_path, data):\n",
+        "    with open(file_path, \"w\") as file_descr:\n",
+        "        yaml.dump(data, file_descr)\n",
+        "\n",
+        "\n",
+        "def click_and_crop(event, x, y, flags, param):\n",
+        "    current_pt = {'id': 0, 'points': []}\n",
+        "    # grab references to the global variables\n",
+        "    global refPt, cropping\n",
+        "    if event == cv2.EVENT_LBUTTONDBLCLK:\n",
+        "        refPt.append((x, y))\n",
+        "        cropping = False\n",
+        "    if len(refPt) == 4:\n",
+        "        if data == []:\n",
+        "            if yaml_loader(file_path) != None:\n",
+        "                data_already = len(yaml_loader(file_path))\n",
+        "            else:\n",
+        "                data_already = 0\n",
+        "        else:\n",
+        "            if yaml_loader(file_path) != None:\n",
+        "                data_already = len(data) + len(yaml_loader(file_path))\n",
+        "            else:\n",
+        "                data_already = len(data) \n",
+        "        \n",
+        "        cv2.line(image, refPt[0], refPt[1], (0, 255, 0), 1)\n",
+        "        cv2.line(image, refPt[1], refPt[2], (0, 255, 0), 1)\n",
+        "        cv2.line(image, refPt[2], refPt[3], (0, 255, 0), 1)\n",
+        "        cv2.line(image, refPt[3], refPt[0], (0, 255, 0), 1)\n",
+        "\n",
+        "        temp_lst1 = list(refPt[2])\n",
+        "        temp_lst2 = list(refPt[3])\n",
+        "        temp_lst3 = list(refPt[0])\n",
+        "        temp_lst4 = list(refPt[1])\n",
+        "\n",
+        "        current_pt['points'] = [temp_lst1, temp_lst2, temp_lst3, temp_lst4]\n",
+        "        current_pt['id'] = data_already\n",
+        "        data.append(current_pt)\n",
+        "        # data_already+=1\n",
+        "        refPt = []\n",
+        "image = cv2.resize(img, None, fx=0.6, fy=0.6)\n",
+        "clone = image.copy()\n",
+        "cv2.namedWindow(\"Double click to mark points\")\n",
+        "cv2.imshow(\"Double click to mark points\", image)\n",
+        "cv2.setMouseCallback(\"Double click to mark points\", click_and_crop)\n",
+        "\n",
+        "# keep looping until the 'q' key is pressed\n",
+        "while True:\n",
+        "    # display the image and wait for a keypress\n",
+        "    cv2.imshow(\"Double click to mark points\", image)\n",
+        "    key = cv2.waitKey(1) & 0xFF\n",
+        "    if cv2.waitKey(33) == 27:\n",
+        "        break\n",
+        "       \n",
+        "# data list into yaml file\n",
+        "if data != []:\n",
+        "    yaml_dump(file_path, data)\n",
+        "cv2.destroyAllWindows() #important to prevent window from becoming inresponsive"
       ],
       "execution_count": 0,
       "outputs": []
