--- a/DeepParking.ipynb
+++ b/DeepParking.ipynb
@@ -594,7 +594,7 @@
       },
       "cell_type": "code",
       "source": [
-        "'''Run this section locally because GPU is not required for creating boxes and imshow will fail in colab'''",
+        "'''Run this section locally because GPU is not required for creating boxes and imshow will fail in colab'''\n",
         "# press escape to finish doing real time boxing.\n",
         "# Program marks the polygons in the figure when it gets 4 double clicks\n",
         "import cv2\n",
