--- a/Training/train_classifier.ipynb
+++ b/Training/train_classifier.ipynb
@@ -618,7 +618,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "## First look at cat pictures"
+        "## First look at car pictures"
       ]
     },
     {
@@ -1063,7 +1063,7 @@
       },
       "cell_type": "code",
       "source": [
-        "# from here we know that 'cats' is label 0 and 'dogs' is label 1.\n",
+        "# from here we know that 'car' is label 0 and 'empty space or other objects like trees, bushes commonly found in parkings near my university' is label 1.\n",
         "data.classes"
       ],
       "execution_count": 0,
@@ -1336,7 +1336,7 @@
       },
       "cell_type": "code",
       "source": [
-        "plot_val_with_title(most_by_correct(0, True), \"Most correct cats\")"
+        "plot_val_with_title(most_by_correct(0, True), \"Most correct cars\")"
       ],
       "execution_count": 0,
       "outputs": [
@@ -1373,7 +1373,7 @@
       },
       "cell_type": "code",
       "source": [
-        "plot_val_with_title(most_by_correct(1, True), \"Most correct dogs\")"
+        "plot_val_with_title(most_by_correct(1, True), \"Most correct not cars (bushes, empty spots etc.)\")"
       ],
       "execution_count": 0,
       "outputs": [
@@ -1410,7 +1410,7 @@
       },
       "cell_type": "code",
       "source": [
-        "plot_val_with_title(most_by_correct(0, False), \"Most incorrect cats\")"
+        "plot_val_with_title(most_by_correct(0, False), \"Most incorrect cars\")"
       ],
       "execution_count": 0,
       "outputs": [
@@ -1447,7 +1447,7 @@
       },
       "cell_type": "code",
       "source": [
-        "plot_val_with_title(most_by_correct(1, False), \"Most incorrect dogs\")"
+        "plot_val_with_title(most_by_correct(1, False), \"Most incorrect not cars\")"
       ],
       "execution_count": 0,
       "outputs": [
@@ -1953,7 +1953,7 @@
         "\n",
         "However, we may find ourselves in a part of the weight space that isn't very resilient - that is, small changes to the weights may result in big changes to the loss. We want to encourage our model to find parts of the weight space that are both accurate and stable. Therefore, from time to time we increase the learning rate (this is the 'restarts' in 'SGDR'), which will force the model to jump to a different part of the weight space if the current area is \"spikey\". Here's a picture of how that might look if we reset the learning rates 3 times (in this paper they call it a \"cyclic LR schedule\"):\n",
         "\n",
-        "<img src=\"images/sgdr.png\" width=\"80%\">\n",
+        "<img src=\"https://github.com/ankit1khare/Deep-Neural-Network-based-parking-system/blob/master/Training/images/sgdr.png?raw=1\" width=\"80%\">\n",
         "(From the paper [Snapshot Ensembles](https://arxiv.org/abs/1704.00109)).\n",
         "\n",
         "The number of epochs between resetting the learning rate is set by `cycle_len`, and the number of times this happens is refered to as the *number of cycles*, and is what we're actually passing as the 2nd parameter to `fit()`. So here's what our actual learning rates looked like:"
@@ -2411,6 +2411,16 @@
     },
     {
       "metadata": {
+        "id": "UYHoJ2OFFvTq",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## Note that there a car is never classified as not car or empty space or other object but classifier confused other objects as car 19 times. When neural network sees an object a lot of times it tends to get a little biased towards it. Therefore, I've used the criteria 'car' as the factor for classifying during execution."
+      ]
+    },
+    {
+      "metadata": {
         "id": "L2aB4SdqaI6C",
         "colab_type": "text"
       },
@@ -2431,7 +2441,7 @@
       },
       "cell_type": "code",
       "source": [
-        "plot_val_with_title(most_by_correct(0, False), \"Most incorrect cats\")"
+        "plot_val_with_title(most_by_correct(0, False), \"Most incorrect cars\")"
       ],
       "execution_count": 0,
       "outputs": [
@@ -2457,7 +2467,7 @@
       },
       "cell_type": "code",
       "source": [
-        "plot_val_with_title(most_by_correct(1, False), \"Most incorrect dogs\")"
+        "plot_val_with_title(most_by_correct(1, False), \"Most incorrect not cars\")"
       ],
       "execution_count": 0,
       "outputs": [
@@ -2489,7 +2499,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "## Review: easy steps to train a world-class image classifier"
+        "## Review: easy steps to train a world-class image classifier. Fastai is a very nice MOOC. I've kept their content from lesson 1 in this notebook keeping in mind that it might aid people who haven't seen that course. I feel this would also encourage them to go through the course."
       ]
     },
     {
@@ -2516,7 +2526,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "## Understanding the code for our first model"
+        "## Understanding the code for the first model"
       ]
     },
     {
@@ -2575,9 +2585,7 @@
       "cell_type": "markdown",
       "source": [
         "`ConvLearner.pretrained` builds *learner* that contains a pre-trained model. The last layer of the model needs to be replaced with the layer of the right dimensions. The pre-trained model was trained for 1000 classes therfore the final layer predicts a vector of 1000 probabilities. The model for cats and dogs needs to output a two dimensional vector. The diagram below shows in an example how this was done in one of the earliest successful CNNs. The layer \"FC8\" here would get replaced with a new layer with 2 outputs.\n",
-        "\n",
-        "<img src=\"images/pretrained.png\" width=\"500\">\n",
-        "[original image](https://image.slidesharecdn.com/practicaldeeplearning-160329181459/95/practical-deep-learning-16-638.jpg)"
+        "\n"
       ]
     },
     {
@@ -2661,116 +2669,6 @@
           "execution_count": 84
         }
       ]
-    },
-    {
-      "metadata": {
-        "id": "r228shZBaI6e",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "## Analyzing results: loss and accuracy"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "K1SUHI-3aI6e",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "When we run `learn.fit` we print 3 performance values (see above.) Here 0.03 is the value of the **loss** in the training set, 0.0226 is the value of the loss in the validation set and 0.9927 is the validation accuracy. What is the loss? What is accuracy? Why not to just show accuracy?\n",
-        "\n",
-        "**Accuracy** is the ratio of correct prediction to the total number of predictions.\n",
-        "\n",
-        "In machine learning the **loss** function or cost function is representing the price paid for inaccuracy of predictions.\n",
-        "\n",
-        "The loss associated with one example in binary classification is given by:\n",
-        "`-(y * log(p) + (1-y) * log (1-p))`\n",
-        "where `y` is the true label of `x` and `p` is the probability predicted by our model that the label is 1."
-      ]
-    },
-    {
-      "metadata": {
-        "id": "2m2J8biEaI6g",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "def binary_loss(y, p):\n",
-        "    return np.mean(-(y * np.log(p) + (1-y)*np.log(1-p)))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "6ZNnIBbmaI6h",
-        "colab_type": "code",
-        "outputId": "5c326695-794f-4be9-fece-4b8dac7096ec",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "cell_type": "code",
-      "source": [
-        "acts = np.array([1, 0, 0, 1])\n",
-        "preds = np.array([0.9, 0.1, 0.2, 0.8])\n",
-        "binary_loss(acts, preds)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.164252033486018"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 86
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "W7ZmUrqDaI6l",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "Note that in our toy example above our accuracy is 100% and our loss is 0.16. Compare that to a loss of 0.03 that we are getting while predicting cats and dogs. Exercise: play with `preds` to get a lower loss for this example. \n",
-        "\n",
-        "**Example:** Here is an example on how to compute the loss for one example of binary classification problem. Suppose for an image x with label 1 and your model gives it a prediction of 0.9. For this case the loss should be small because our model is predicting a label $1$ with high probability.\n",
-        "\n",
-        "`loss = -log(0.9) = 0.10`\n",
-        "\n",
-        "Now suppose x has label 0 but our model is predicting 0.9. In this case our loss should be much larger.\n",
-        "\n",
-        "loss = -log(1-0.9) = 2.30\n",
-        "\n",
-        "- Exercise: look at the other cases and convince yourself that this make sense.\n",
-        "- Exercise: how would you rewrite `binary_loss` using `if` instead of `*` and `+`?\n",
-        "\n",
-        "Why not just maximize accuracy? The binary classification loss is an easier function to optimize."
-      ]
-    },
-    {
-      "metadata": {
-        "id": "ospqXfbQQP-4",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
