--- a/DeepParking.ipynb
+++ b/DeepParking.ipynb
@@ -60,7 +60,7 @@
       "metadata": {
         "id": "LKEjnxdGZAbX",
         "colab_type": "code",
-        "outputId": "fa08053d-248c-4f17-9dde-7a95254184fe",
+        "outputId": "f94271e6-aaf4-4bee-bb46-c5430028c9ba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -110,6 +110,16 @@
     },
     {
       "metadata": {
+        "id": "E0BGlgUyev4-",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ]
+    },
+    {
+      "metadata": {
         "id": "uZq3c5eWaq0F",
         "colab_type": "code",
         "colab": {}
@@ -120,6 +130,51 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "z26pU9tdetzf",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "**The above version of Torch text is required with fastai library**"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "BEBv-0mZfDbZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 55
+        },
+        "outputId": "a7aa3970-19be-40b5-9fe5-8b14a5d3e8e8"
+      },
+      "cell_type": "code",
+      "source": [
+        "!rm -r '/content/drive/My Drive/AK49/Parking/fastai/courses/dl1/data/tmp'"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "rm: cannot remove '/content/drive/My Drive/AK49/Parking/fastai/courses/dl1/data/tmp': No such file or directory\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "5s9Y-1UNftdn",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "**Remove tmp folder to avoid errors**"
+      ]
     },
     {
       "metadata": {
@@ -157,7 +212,7 @@
       "metadata": {
         "id": "tFakO2ExYBVB",
         "colab_type": "code",
-        "outputId": "1588eaa6-be5f-41a4-9a5e-a9e1d5974ad0",
+        "outputId": "87ed17ab-31ad-47f6-c5cc-ff1484a54005",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -169,7 +224,7 @@
         "fn = \"Khare_testvideo_01.mp4\" #3\n",
         "#fn = \"datasets\\parkinglot_1_720p.mp4\"\n",
         "#fn = \"datasets\\street_high_360p.mp4\"\n",
-        "fn_yaml = \"Khare_yml_01 (1).yml\"\n",
+        "fn_yaml = \"Khare_yml_01.yml\"\n",
         "fn_out =  \"Khare_outputvideo_01.avi\"\n",
         "# cascade_src = 'Khare_classifier_02.xml'\n",
         "# car_cascade = cv2.CascadeClassifier(cascade_src)\n",
@@ -200,7 +255,7 @@
         "\n",
         "cap.set(cv2.CAP_PROP_POS_FRAMES, dict['start_frame']) # jump to frame number specified\n"
       ],
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,7 +267,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 9
         }
       ]
     },
@@ -220,11 +275,11 @@
       "metadata": {
         "id": "JwtkRSOiYBVL",
         "colab_type": "code",
+        "outputId": "4f8302ef-af43-4a59-b6f1-bfa408f0072c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
-        },
-        "outputId": "e8d672ec-b603-42ee-aac9-28ec6637c64c"
+          "height": 72
+        }
       },
       "cell_type": "code",
       "source": [
@@ -251,7 +306,7 @@
           "output_type": "stream",
           "text": [
             "Downloading: \"https://download.pytorch.org/models/resnet101-5d3b4d8f.pth\" to /root/.torch/models/resnet101-5d3b4d8f.pth\n",
-            "100%|██████████| 178728960/178728960 [00:01<00:00, 103899668.89it/s]\n"
+            "100%|██████████| 178728960/178728960 [00:06<00:00, 26928663.88it/s]\n"
           ],
           "name": "stderr"
         }
@@ -286,7 +341,11 @@
       "metadata": {
         "id": "2z7mPxd7YBVQ",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 236
+        },
+        "outputId": "6079328d-22e4-4f31-dbf4-09176716a139"
       },
       "cell_type": "code",
       "source": [
@@ -316,7 +375,7 @@
         "kernel_erode = cv2.getStructuringElement(cv2.MORPH_ELLIPSE,(3,3)) # morphological kernel\n",
         "kernel_dilate = cv2.getStructuringElement(cv2.MORPH_RECT,(5,19))\n",
         "if parking_data != None:\n",
-        "    parking_status = [False]*len(parking_data)\n",
+        "    parking_status = [True]*len(parking_data)\n",
         "    parking_buffer = [None]*len(parking_data)\n",
         "# bw = ()\n",
         "\n",
@@ -331,8 +390,20 @@
         "    cv2.putText(frame_rev, str(park['id']), (centroid[0]-1, centroid[1]+1), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255,255,255), 1, cv2.LINE_AA)\n",
         "    cv2.putText(frame_rev, str(park['id']), centroid, cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0,0,0), 1, cv2.LINE_AA)\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-12-6552967193cf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfn_yaml\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mstream\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mparking_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0myaml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstream\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mparking_contours\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mparking_bounding_rects\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'Khare_yml_01 (1).yml'"
+          ]
+        }
+      ]
     },
     {
       "metadata": {
@@ -489,6 +560,7 @@
       "cell_type": "code",
       "source": [
         "# !mkdir ./videos/frameset\n",
+        "# !rm -r ./videos/frameset\n",
         "# !ls"
       ],
       "execution_count": 0,
