Revert "Update DeepParking.ipynb"
This reverts commit cb132fff0637ea07dc6fbdb272c0e62c503383ef.

Reverting to last version

--- a/DeepParking.ipynb
+++ b/DeepParking.ipynb
@@ -669,7 +669,7 @@
       },
       "cell_type": "code",
       "source": [
-        "'''Run this section locally because GPU is not required for creating boxes and imshow will fail in colab'''\n",
+        "'''Run this section locally because GPU is not required for creating boxes and imshow will fail in colab'''",
         "# press escape to finish doing real time boxing.\n",
         "# Program marks the polygons in the figure when it gets 4 double clicks\n",
         "import cv2\n",
